# avx-parquet-scanner

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/encoding/: .fixlen-encoding.h.swp  CMakeLists.txt  Makefile  cmake_install.cmake  fixlen-encoding.h
src/exprs/: CMakeLists.txt  Makefile  cmake_install.cmake  compound-predicates.cc  compound-predicates.h  expr.cc  expr.h  in-predicate.cc  in-predicate.h  literal.h  operators.cc  operators.h  predicate-test.cc  predicate.h  slot-ref.cc  slot-ref.h
